--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,18 @@
 stages:
-- prepare
 - build
 
 ubuntu-self-contained:
   stage: build
   image: ubuntu:18.04
   script:
-  - mkdir build
-  - mkdir build/mkdist
-  - cd build/mkdist
-  - cmake ../..
-
-ubuntu-system-dependencies:
-  stage: prepare
-  image: ubuntu:18.04
-  script:
   - whoami
   - cat /etc/apt/sources.list
   - sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list
   - cat /etc/apt/sources.list
-  - sudo add-apt-repository main
-  - sudo add-apt-repository universe
-  - sudo add-apt-repository restricted
-  - sudo add-apt-repository multiverse
+  - add-apt-repository main
+  - add-apt-repository universe
+  - add-apt-repository restricted
+  - add-apt-repository multiverse
   - cat /etc/apt/sources.list
   - apt-get update
   - apt-get install -y -q \
@@ -32,3 +22,23 @@ ubuntu-system-dependencies:
     libevent-dev dpatch gawk gdb libboost-dev libcrack2-dev \
     libjudy-dev libnuma-dev libsnappy-dev libxml2-dev \
     unixodbc-dev uuid-dev fakeroot iputils-ping
+  - mkdir build
+  - mkdir build/mkdist
+  - cd build/mkdist
+  - cmake ../..
+    
+windows job:
+  stage:
+    - build
+  tags:
+    - windows
+  script:
+    - echo Hello, %USERNAME%!
+
+osx job:
+  stage:
+    - build
+  tags:
+    - osx
+  script:
+    - echo "Hello, $USER!"
