--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,15 +9,13 @@ ubuntu-self-contained:
   - cat /etc/apt/sources.list
   - sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list
   - cat /etc/apt/sources.list
-  - sed -i~orig -e 's/# deb/deb/' /etc/apt/sources.list
-  - cat /etc/apt/sources.list
   - apt-get update
-  - apt-get install -y -q \
-    apt-utils build-essential cmake python-dev sudo git \
-    devscripts equivs libcurl4-openssl-dev \
-    ccache python3 python3-pip curl libssl-dev libzstd-dev \
-    libevent-dev dpatch gawk gdb libboost-dev libcrack2-dev \
-    libjudy-dev libnuma-dev libsnappy-dev libxml2-dev \
+  - apt-get install -y -q
+    apt-utils build-essential cmake python-dev sudo git
+    devscripts equivs libcurl4-openssl-dev
+    ccache python3 python3-pip curl libssl-dev libzstd-dev
+    libevent-dev dpatch gawk gdb libboost-dev libcrack2-dev
+    libjudy-dev libnuma-dev libsnappy-dev libxml2-dev
     unixodbc-dev uuid-dev fakeroot iputils-ping
   - mkdir build
   - mkdir build/mkdist
