--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ ubuntu-self-contained:
     libevent-dev dpatch gawk gdb libboost-dev libcrack2-dev
     libjudy-dev libnuma-dev libsnappy-dev libxml2-dev
     unixodbc-dev uuid-dev fakeroot iputils-ping
+    libncurses5-dev
   - mkdir build
   - mkdir build/mkdist
   - cd build/mkdist
